resources/onyx-screen.css
body {
	margin: 0;
	padding: 0;
	fill: none;
	font-family: "Roboto", sans-serif;
	font-size: 12pt;
}

h1 {
	padding: 15px 15px 5px 5px;
	font-size: 36px;
}

h2 {
	padding: 15px 15px 5px 5px;
	font-size: 28px;
}

h3 {
	font-size: 24px;
}

h4 {
	font-size: 20px;
}

ul {
	list-style-type: square;
}

code {
	border: none;
	font-family: "Roboto Mono", monospace;
	background-color: #aaa;
}

pre {
	border: none;
	padding: 15px;
	font-family: "Roboto Mono", monospace;
	background-color: #aaa;
}

/* MEDIAWIKI CLASSES */
.mw-notification-area {
	top: unset !important;
	bottom: 25px !important;
	position: fixed !important;
}

.toc {
	min-width: 300px;
	margin: 15px;
	border: none;
	padding: 5px 5px 0 0;
	background-color: transparent;
}

.toctitle {
	padding: 0 0 5px 5px;
	border-bottom: 1px solid #a2a9b1;
	text-align: left !important;
}

.toctoggle,
.toctogglespan {
	float: right;
	margin: 0 5px;
}

.tocnumber {
	color: #444;
}

.mw-headline {
	margin-top: -60px;
	padding-top: 60px;
}

.mw-editsection-bracket {
	display: none;
}

.thumbinner {
	border: none !important;
	background-color: #aaa !important;
}

.catlinks {
	border: none !important;
	background-color: #aaa !important;
}

.mw-indicators {
	float: right;
	font-size: 18px;
	height: 44px;
	overflow: hidden;
}

.mw-indicator {
	display: inline-flex;
	margin-left: 15px;
	height: 44px;
	overflow: hidden;
	flex-direction: column;
	align-content: center;
	justify-content: center;
}

.postedit-container {
	top: 55px!important;
}

/* ONYX CLASSES */
.onyx-articleContainer {
	display: grid;
	grid-column-gap: 15px;
	grid-template-columns: 1fr min-content;
	padding: 0 15px;
}

.onyx-articleAligned {
	grid-row: 1;
	grid-column: 1;
}

/*
 * This class is used to align elements with the fixed-width page itself, so
 * that they are in line with it vertically, and have the same width.
 */
 .onyx-pageAligned {
	max-width: 90vw;
	width: 1440px;
	min-width: 50vw;
	margin-left: auto;
	margin-right: auto;
}

/*
 * This class is used to align elements with the page's sidebar, so that they
 * are in line with it vertically, and have the same width. This only works if
 * the element is a child of an element of the onyx-pageAligned class, and a
 * direct child of the onyx-articleContainer class.
*/
.onyx-sidebarAligned {
	grid-row: 1;
	grid-column: 2;
	max-width: 30vw;
	width: 340px;
}

/*
 * This class is used to style all buttons on the Onyx skin.
 */
.onyx-button {
	border: 1px solid transparent;
	padding: 10px;
	display: inline-flex;
	align-content: center;
	align-items: center;
	text-align: center;
	vertical-align: middle;
	text-transform: uppercase;
	text-decoration: none;
	cursor: pointer;
	/* Disable selection of button text */
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.onyx-button:hover {
	text-decoration: none;
}

/*
 * This class is used to style primary buttons in the Onyx skin, which are
 * those that the user is most likely to click on (Edit, etc).
 */
.onyx-button-primary {
	border: 1px solid #333;
	color: #fff;
	background-color: #333;
	stroke: #fff;
	stroke-width: 2px;
	transition: 0.4s;
}

.onyx-button-primary:hover,
.onyx-dropdown:hover > .onyx-button-primary {
	border: 1px solid #777;
	color: #fff;
	background-color: #777;
	transition: 0.4s;
}

/*
 * This class is used to style auxiliary buttons in the Onyx skin.
 */
.onyx-button-secondary {
	border: 1px solid #333;
	color: #333;
	stroke: #333;
	stroke-width: 2px;
	transition: 0.4s;
}

.onyx-button-secondary:hover,
.onyx-dropdown:hover > .onyx-button-secondary {
	border: 1px solid #777;
	color: #777;
	stroke: #777;
	transition: 0.4s;
}

/*
 * This class is used to style the action buttons in the Onyx skin (Edit, Talk,
 * and Toggle Sidebar).
 */
.onyx-button-action {
	height: 28px;
	margin: 15px 0 15px 0;
}

.onyx-button-action > span {
	margin: auto 20px;
}

.onyx-button-text {
	margin: auto;
	text-decoration: none;
}

.onyx-dropdown {
	position: relative;
}

.onyx-dropdown-list {
	display: none;
	position: absolute;
	right: 0;
	background-color: #eee;
	min-width: 200px;
	margin: 0;
	padding: 10px;
	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3);
	z-index: 999;
}

.onyx-dropdown:hover > .onyx-dropdown-list {
	display: block;
}

.onyx-dropdown-list > li {
	margin: 0;
	padding: 0;
	list-style: none;
}

.onyx-dropdown-list > li:not(:last-child) {
	border-bottom: 1px solid #999;
}

.onyx-dropdown-list > li > *:only-child {
	color: #000;
	padding: 5px 5px 5px 5px;
	text-decoration: none;
	display: block;
}

.onyx-dropdown-list > li > a:only-child {
	padding: 10px 10px 10px 15px;
}

.onyx-dropdown-list > li > a:only-child:hover {
	background-color: #ddd;
}

.onyx-dropdown .onyx-dropdown-icon {
	transition: 0.4s;
}

.onyx-dropdown:hover .onyx-dropdown-icon {
	transform: rotate(180deg);
	transition: 0.4s;
}

.onyx-bannerOption {
	display:inline-block;
}

.onyx-bannerOption-button {
	display: flex;
	padding: 5px 15px;
	align-items: center;
	height: 45px;
	transition: 0.4s;
}

.onyx-bannerOption:hover > .onyx-bannerOption-button {
	background-color: #444;
	transition: 0.4s;
}

.onyx-bannerOption-icon {
	display: inline-flex;
	align-items: center;
	justify-items: center;
	stroke: #bbbbbb;
	stroke-width: 2px;
	height: 45px;
	margin-top: 0;
	margin-bottom: 0;
	transition: 0.4s;
}

.onyx-bannerOption:hover .onyx-bannerOption-icon {
	stroke: #ffffff;
	transition: 0.4s;
}

#onyx-userButton-avatar > img {
	border: 2px solid #bbbbbb;
	border-radius: 16px;
	transition: 0.4s;
}

#onyx-userOptions-personalTools:hover #onyx-userButton-avatar > img {
	border-color: #ffffff;
	transition: 0.4s;
}

.onyx-bannerOption-dropdownIcon {
	height: 15px;
	margin: 15px 0 15px 15px;
	display: inline-block;
	stroke: #bbbbbb;
	stroke-width: 2px;
	fill: #bbbbbb;
	transition: 0.4s;
}

.onyx-bannerOption:hover .onyx-bannerOption-dropdownIcon {
	stroke: #ffffff;
	fill: #ffffff;
	transition: 0.4s;
}
/* ... */

